<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DriverApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="school">School</string>
    <string name="trip">Trip</string>
    <string name="enter_child_name">Enter child name</string>
    <string name="cancel">Cancel</string>
    <string name="device_update_failed">Device update failed</string>
    <string name="error">Error</string>
    <string name="add_child">Add child</string>
    <string name="not_available">Not available</string>
    <string name="db_update_failed">Data base update failed</string>
    <string name="retry">Retry</string>
    <string name="ok">Ok</string>
    <string name="impossible_to_update_when_a_trip_is_ongoing">Impossible to update when a trip is ongoing</string>
    <string name="force_update">Force update</string>
    <string name="updating">Updating ...</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="on_the_way">On the way</string>
    <string name="start">Start</string>
    <string name="pickup">Pick up</string>
    <string name="dropoff">Drop off</string>
    <string name="later">Later</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="end_trip">Finish Trip</string>
    <string name="ret">Return</string>
    <string name="special_home_trip_name">Special Home Trip</string>
    <string name="special_school_trip_name">Special School Trip</string>
    <string name="choose_one">choose one</string>
    <string name="choose_a_school_first">Choose a school first in the settings</string>
    <string name="choose_a_trip_first">Choose a trip first</string>
    <string name="start_trip">Start Trip</string>
    <string name="warning">Warning</string>
    <string name="no_childs_in_this_trip">There is no child in this trip !</string>
    <string name="confirmation_quit">Do you really want to exit?</string>
    <string name="confirmation_cancel_trip">Do you really want to cancel this trip?</string>
    <string name="all_kids_dealed_with">All kids have been dealed with</string>
    <string name="from_parent">From Parent</string>
    <string name="from_school">From School</string>
    <string name="from_company">From Company</string>
    <string name="from_unknown">From Unknown</string>
    <string name="emergency">EMERGENCY</string>
    <string name="doesnt_take_the_bus">doesn\'t take the bus</string>
    <string name="child_is_not_part_of_current_trip">Child is not part of this trip</string>
    <string name="enable_gps">Please enable GPS sensor</string>
    <string name="plug_charger">Please plug charger</string>
    <string name="open_localisation_parameter">Open GPS parameters</string>
    <string name="title_activity_init"></string>
    <string name="device_update">Device update ...</string>
    <string name="db_update">Data base update ...</string>
    <string name="internet_connection_required_to_init_app">An internet connection is required to init the app</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="app_version_title">App Version</string>
    <string name="last_device_info_update_title">Last Device update</string>
    <string name="last_db_update_title">Last DB update</string>
    <string name="device_id_title">Device ID</string>
    <string name="gateway_title">Gateway</string>
    <string name="auto_update_check_hour">Auto update check Hour (0-24)</string>
    <string name="auto_update_check_period">Auto update check period (minute)</string>
    <string name="device_check_period_title">GPS, charger check period (minute)</string>

</resources>
